package footballRanking.models;

public class Match {
}
