package footballRanking.models;

public class Player {
}
