package footballRanking.models;

public class Team {
}
