package footballRanking.prediction;

public class MatchPredictor {
}
