package footballRanking.ranking;

public class RankingCalculator {
}
